[package]
name = "basic_wasi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ['cdylib']

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
ethabi ={ version =  "17.2.0", default-features = false, features = ["full-serde"] }
sha2 = "0.10.6"
p256 = { version = "0.11.1", features = ["serde", "ecdsa-core"]}
rand_core = "0.6.4"
signature = "1.6.4"
lazy_static = "1.4.0"
reqwest = "0.11.14"
tokio = {version = "1.25.0", features = ["full"]}
